kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versions-frontend
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      service: versions-frontend
  replicas: 2
  template:
    metadata:
      labels:
        service: versions-frontend
    spec:
      containers:
        - name: versions-frontend
          image: docker.io/philippgille/serve
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /srv
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: versions-data
---
apiVersion: v1
kind: Service
metadata:
  name: versions
  labels:
    service: versions
spec:
  ports:
  - port: 8080
  selector:
    service: versions-frontend
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: versions
spec:
  rules:
  - host: versions.kos.kjnet.xyz
    http:
      paths:
      - backend:
          serviceName: versions
          servicePort: 8080
